<resources>
    <string name="app_name">Prenotimi</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sot">Sot</string>
    <string name="emri_dhe_mbiemri_hint">Emri &amp; Mbiemri</string>
    <string name="nr_telefonit_hint">Nr.Telefonit</string>
    <string name="koha_add_event">Koha</string>
    <string name="shto_rezervim">Shto Rezervimin</string>
    <string name="detajet_e_rezervimit_hint">Detajet e Rezervimit</string>


    //EventView template for details
    <string name="details_placeholder">%1$s,\u0020 \u0020 %2$s, \u0020 %3$s</string>

    //CalendarDay rezervimet preview
    <string name="rezervimet_preview">%1$s,\u0020 %2$s</string>
    <string name="log_out_text">Log Out</string>
    <string name="ndrysho_text">Ndrysho</string>
    <string name="username_text">Username</string>
    <string name="log_in_text">Kyqu</string>
    <string name="forgot_password_text">Keni harruar fjalëkalimin?</string>
    <string name="password_text">Fjalëkalimi</string>
    <string name="emaili_text">Emaili</string>
    <string name="fshije_text_button">Fshije</string>
    <string name="makerspace_text">Makerspace</string>
    <string name="makerspace_gmail_com">makerspace@gmail.com</string>
    <string name="shko_te_rezervimi">Shko te rezervimi</string>
    <string name="listo_rezervimet_text">Listo Rezervimet</string>
    <string name="rezervim_i_perseritshem_text">Rezervim i perseritshem</string>
    <string name="zgjedhe_daten_prej">Prej</string>
    <string name="zgjedhe_daten_deri">Deri</string>

</resources>
