<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.ardritkrasniqi.prenotimi.ui.shtoRezervimDialog.ShtoRezervimViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_sheet_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:orientation="vertical"
            app:behavior_hideable="true"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


            <TextView
                android:id="@+id/shtoRezervim_text"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/basic"
                android:gravity="center"
                android:text="@string/shto_rezervim"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/klienti_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/basic"
                android:text="Klienti"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shtoRezervim_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_emri"
                style="@style/MaterialEditText"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/emri_dhe_mbiemri_hint"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                android:focusable="false"
                android:focusableInTouchMode="true"
                app:boxBackgroundMode="outline"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/hintTextAppearance"
                app:layout_constraintEnd_toStartOf="@+id/outlinedTextField_telefoni"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/klienti_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/emri_mbiemri"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/basic"
                    android:singleLine="true"
                    android:inputType="textCapWords"
                    android:textSize="25sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_telefoni"
                style="@style/MaterialEditText"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:animationCache="true"
                android:gravity="center"
                android:hint="@string/nr_telefonit_hint"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextAppearance="@style/hintTextAppearance"
                app:layout_constraintBottom_toBottomOf="@+id/outlinedTextField_emri"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/outlinedTextField_emri"
                app:layout_constraintTop_toTopOf="@+id/outlinedTextField_emri">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/basic"
                    android:singleLine="true"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:id="@+id/telefoni_edit"
                    android:inputType="number"
                    android:textSize="25sp"
                    tools:layout_editor_absoluteX="702dp"
                    tools:layout_editor_absoluteY="208dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_komenti"
                style="@style/MaterialEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/detajet_e_rezervimit_hint"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/hintTextAppearance"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/outlinedTextField_emri"
                app:layout_constraintTop_toBottomOf="@id/outlinedTextField_emri"
                app:layout_constraintEnd_toEndOf="@id/outlinedTextField_telefoni">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/basic"
                    android:id="@+id/komenti_edit"
                    android:singleLine="true"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="25sp"
                    tools:layout_editor_absoluteX="702dp"
                    tools:layout_editor_absoluteY="208dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="400dp" />

            <TextView
                android:id="@+id/koha_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/basic"
                android:text="@string/koha_add_event"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="@+id/klienti_text"
                app:layout_constraintTop_toBottomOf="@id/guideline" />

            <TextView
                android:id="@+id/prej_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_date_range"
                android:drawablePadding="10dp"
                android:text="Prej"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/prej_edit_container"
                app:layout_constraintTop_toBottomOf="@id/koha_text" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/prej_edit_container"
                style="@style/MaterialEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/basic"
                android:hint="@string/zgjedhe_daten_prej"
                android:inputType="none"
                android:textColor="@color/black_color"
                android:textColorHint="#83000000"
                android:textIsSelectable="false"
                android:textSize="27sp"
                app:boxStrokeColor="@color/colorAccent"
                app:layout_constraintEnd_toStartOf="@+id/deri_edit_container"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/outlinedTextField_komenti"
                app:layout_constraintTop_toBottomOf="@id/prej_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/prej_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="false"
                    android:fontFamily="@font/basic"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/deri_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_date_range"
                android:drawablePadding="10dp"
                android:text="Deri"
                android:textIsSelectable="false"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/prej_text"
                app:layout_constraintStart_toStartOf="@+id/deri_edit_container" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deri_edit_container"
                style="@style/MaterialEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/basic"
                android:hint="@string/zgjedhe_daten_deri"
                android:inputType="none"
                android:textSize="27sp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/hintTextAppearance"
                app:layout_constraintBaseline_toBaselineOf="@+id/prej_edit_container"
                app:layout_constraintEnd_toEndOf="@+id/switcher"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/prej_edit_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deri_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:fontFamily="@font/basic"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/frekuenca_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/basic"
                android:text="@string/rezervim_i_perseritshem_text"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/switcher"
                app:layout_constraintEnd_toStartOf="@id/switcher" />


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_komenti"
                app:layout_constraintTop_toBottomOf="@id/guideline" />

            <Button
                android:id="@+id/shtoRezervimin_button"
                style="Widget.MaterialComponents.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="#4CAF50"
                android:fontFamily="@font/basic"
                android:text="+ Shto Rezervimin"
                android:textColor="#fff"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fshi_rezervimin_button" />

            <Button
                android:id="@+id/fshi_rezervimin_button"
                style="Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="#E53935"
                android:fontFamily="@font/basic"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                app:icon="@drawable/ic_delete_forever_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="Fshije"
                android:visibility="gone"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>